- Message spacing on modern layout has been fixed and now looks pretty good! - Colouring of unread messages and the border has been tweaked to be more obvious

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -416,14 +416,11 @@
     color: #fff;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--unread {
-    background: rgba(0, 0, 0, 0.09);
-    border-left: 5px solid rgba(0, 0, 0, 0.05);
-}
-
+.kiwi-messagelist-message.kiwi-messagelist-message--unread,
 .kiwi-messagelist-message.kiwi-messagelist-message.kiwi-messagelist-message--unread.kiwi-messagelist-message--unread {
-    border-left: 2px solid #42b992;
-    background: #fff;
+  border-left: 5px solid #42b992;
+  background: #f2f2f2;
+  opacity: 1;
 }
 
 .kiwi-messagelist-message.kiwi-messagelist-message.kiwi-messagelist-message--unread.kiwi-messagelist-message--unread.kiwi-messagelist-message-connection {
